Yealink Added yealink_missed_calllog to control whether missed calls are logged or not

--- a/resources/templates/provision/yealink/t33g/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t33g/{$mac}.cfg
@@ -314,7 +314,7 @@ account.1.share_line.cancel_private_code =
 #######################################################################################
 ##                                 History                                           ##       
 #######################################################################################
-account.1.missed_calllog=
+account.1.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################  
@@ -885,7 +885,7 @@ account.2.share_line.cancel_private_code =
 #######################################################################################
 ##                                 History                                           ##
 #######################################################################################
-account.2.missed_calllog=
+account.2.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################
@@ -1453,7 +1453,7 @@ account.3.share_line.cancel_private_code =
 #######################################################################################
 ##                                 History                                           ##
 #######################################################################################
-account.3.missed_calllog=
+account.3.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################
@@ -2021,7 +2021,7 @@ account.4.share_line.cancel_private_code =
 #######################################################################################
 ##                                 History                                           ##
 #######################################################################################
-account.4.missed_calllog=
+account.4.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################
