--- a/resources/templates/provision/yealink/t43u/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t43u/{$mac}.cfg
@@ -310,7 +310,7 @@ account.1.share_line.cancel_private_code =
 #######################################################################################
 ##                                 History                                           ##
 #######################################################################################
-account.1.missed_calllog=
+account.1.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################
@@ -878,7 +878,7 @@ account.2.share_line.cancel_private_code =
 #######################################################################################
 ##                                 History                                           ##
 #######################################################################################
-account.2.missed_calllog=
+account.2.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################
@@ -1446,7 +1446,7 @@ account.3.share_line.cancel_private_code =
 #######################################################################################
 ##                                 History                                           ##
 #######################################################################################
-account.3.missed_calllog=
+account.3.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################
@@ -2014,7 +2014,7 @@ account.4.share_line.cancel_private_code =
 #######################################################################################
 ##                                 History                                           ##
 #######################################################################################
-account.4.missed_calllog=
+account.4.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################
@@ -2582,7 +2582,7 @@ account.5.share_line.cancel_private_code =
 #######################################################################################
 ##                                 History                                           ##
 #######################################################################################
-account.5.missed_calllog=
+account.5.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################
@@ -3150,7 +3150,7 @@ account.6.share_line.cancel_private_code =
 #######################################################################################
 ##                                 History                                           ##
 #######################################################################################
-account.6.missed_calllog=
+account.6.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################
