--- a/resources/templates/provision/yealink/t48s/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t48s/{$mac}.cfg
@@ -439,7 +439,7 @@ account.1.music_server_uri =
 account.1.auto_answer =
 
 #Enable or disable the phone to record the missed call; 0-Disabled, 1-Enabled (default);
-account.1.missed_calllog =
+account.1.missed_calllog = {$yealink_missed_calllog}
 
 #Enable or disable the 100 reliable retransmission; 0-Disabled (default), 1-Enabled;
 account.1.100rel_enable = {$yealink_retransmission}
@@ -915,7 +915,7 @@ account.2.music_server_uri =
 account.2.auto_answer =
 
 #Enable or disable the phone to record the missed call; 0-Disabled, 1-Enabled (default);
-account.2.missed_calllog =
+account.2.missed_calllog = {$yealink_missed_calllog}
 
 #Enable or disable the 100 reliable retransmission; 0-Disabled (default), 1-Enabled;
 account.2.100rel_enable = {$yealink_retransmission}
@@ -1402,7 +1402,7 @@ account.3.music_server_uri =
 account.3.auto_answer =
 
 #Enable or disable the phone to record the missed call; 0-Disabled, 1-Enabled (default);
-account.3.missed_calllog =
+account.3.missed_calllog = {$yealink_missed_calllog}
 
 #Enable or disable the 100 reliable retransmission; 0-Disabled (default), 1-Enabled;
 account.3.100rel_enable = {$yealink_retransmission}
@@ -1874,7 +1874,7 @@ account.4.music_server_uri =
 account.4.auto_answer =
 
 #Enable or disable the phone to record the missed call; 0-Disabled, 1-Enabled (default);
-account.4.missed_calllog =
+account.4.missed_calllog = {$yealink_missed_calllog}
 
 #Enable or disable the 100 reliable retransmission; 0-Disabled (default), 1-Enabled;
 account.4.100rel_enable = {$yealink_retransmission}
@@ -2346,7 +2346,7 @@ account.5.music_server_uri =
 account.5.auto_answer =
 
 #Enable or disable the phone to record the missed call; 0-Disabled, 1-Enabled (default);
-account.5.missed_calllog =
+account.5.missed_calllog = {$yealink_missed_calllog}
 
 #Enable or disable the 100 reliable retransmission; 0-Disabled (default), 1-Enabled;
 account.5.100rel_enable = {$yealink_retransmission}
@@ -2817,7 +2817,7 @@ account.6.music_server_uri =
 account.6.auto_answer =
 
 #Enable or disable the phone to record the missed call; 0-Disabled, 1-Enabled (default);
-account.6.missed_calllog =
+account.6.missed_calllog = {$yealink_missed_calllog}
 
 #Enable or disable the 100 reliable retransmission; 0-Disabled (default), 1-Enabled;
 account.6.100rel_enable = {$yealink_retransmission}
