--- a/resources/templates/provision/yealink/t48u/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t48u/{$mac}.cfg
@@ -305,7 +305,7 @@ account.{$row.line_number}.share_line.cancel_private_code =
 #######################################################################################
 ##                                 History                                           ##
 #######################################################################################
-account.{$row.line_number}.missed_calllog=
+account.{$row.line_number}.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################
