--- a/resources/templates/provision/yealink/t53/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t53/{$mac}.cfg
@@ -305,7 +305,7 @@ account.1.auto_answer_mute_enable
 #######################################################################################
 ##                                 History                                           ##       
 #######################################################################################
-account.1.missed_calllog=
+account.1.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################  
@@ -844,7 +844,7 @@ account.2.auto_answer_mute_enable
 #######################################################################################
 ##                                 History                                           ##       
 #######################################################################################
-account.2.missed_calllog=
+account.2.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################  
@@ -1371,7 +1371,7 @@ account.3.auto_answer_mute_enable
 #######################################################################################
 ##                                 History                                           ##       
 #######################################################################################
-account.3.missed_calllog=
+account.3.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################  
@@ -1898,7 +1898,7 @@ account.4.auto_answer_mute_enable
 #######################################################################################
 ##                                 History                                           ##       
 #######################################################################################
-account.4.missed_calllog=
+account.4.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################  
@@ -2424,7 +2424,7 @@ account.5.auto_answer_mute_enable
 #######################################################################################
 ##                                 History                                           ##       
 #######################################################################################
-account.5.missed_calllog=
+account.5.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################  
@@ -2964,7 +2964,7 @@ account.6.auto_answer_mute_enable
 #######################################################################################
 ##                                 History                                           ##       
 #######################################################################################
-account.6.missed_calllog=
+account.6.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################  
@@ -3491,7 +3491,7 @@ account.7.auto_answer_mute_enable
 #######################################################################################
 ##                                 History                                           ##       
 #######################################################################################
-account.7.missed_calllog=
+account.7.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################  
@@ -4018,7 +4018,7 @@ account.8.auto_answer_mute_enable
 #######################################################################################
 ##                                 History                                           ##       
 #######################################################################################
-account.8.missed_calllog=
+account.8.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################  
@@ -4545,7 +4545,7 @@ account.9.auto_answer_mute_enable
 #######################################################################################
 ##                                 History                                           ##       
 #######################################################################################
-account.9.missed_calllog=
+account.9.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################  
@@ -5072,7 +5072,7 @@ account.10.auto_answer_mute_enable
 #######################################################################################
 ##                                 History                                           ##       
 #######################################################################################
-account.10.missed_calllog=
+account.10.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################  
