--- a/resources/templates/provision/yealink/t53w/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t53w/{$mac}.cfg
@@ -306,7 +306,7 @@ account.1.auto_answer_mute_enable
 #######################################################################################
 ##                                 History                                           ##       
 #######################################################################################
-account.1.missed_calllog=
+account.1.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################  
@@ -846,7 +846,7 @@ account.2.auto_answer_mute_enable
 #######################################################################################
 ##                                 History                                           ##       
 #######################################################################################
-account.2.missed_calllog=
+account.2.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################  
@@ -1374,7 +1374,7 @@ account.3.auto_answer_mute_enable
 #######################################################################################
 ##                                 History                                           ##       
 #######################################################################################
-account.3.missed_calllog=
+account.3.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################  
@@ -1902,7 +1902,7 @@ account.4.auto_answer_mute_enable
 #######################################################################################
 ##                                 History                                           ##       
 #######################################################################################
-account.4.missed_calllog=
+account.4.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################  
@@ -2429,7 +2429,7 @@ account.5.auto_answer_mute_enable
 #######################################################################################
 ##                                 History                                           ##       
 #######################################################################################
-account.5.missed_calllog=
+account.5.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################  
@@ -2970,7 +2970,7 @@ account.6.auto_answer_mute_enable
 #######################################################################################
 ##                                 History                                           ##       
 #######################################################################################
-account.6.missed_calllog=
+account.6.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################  
@@ -3498,7 +3498,7 @@ account.7.auto_answer_mute_enable
 #######################################################################################
 ##                                 History                                           ##       
 #######################################################################################
-account.7.missed_calllog=
+account.7.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################  
@@ -4026,7 +4026,7 @@ account.8.auto_answer_mute_enable
 #######################################################################################
 ##                                 History                                           ##       
 #######################################################################################
-account.8.missed_calllog=
+account.8.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################  
@@ -4554,7 +4554,7 @@ account.9.auto_answer_mute_enable
 #######################################################################################
 ##                                 History                                           ##       
 #######################################################################################
-account.9.missed_calllog=
+account.9.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################  
@@ -5082,7 +5082,7 @@ account.10.auto_answer_mute_enable
 #######################################################################################
 ##                                 History                                           ##       
 #######################################################################################
-account.10.missed_calllog=
+account.10.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################  
