--- a/resources/templates/provision/yealink/t56a/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t56a/{$mac}.cfg
@@ -411,7 +411,7 @@ account.1.music_server_uri =
 ##                            Advanced                                               ##
 #######################################################################################
 account.1.auto_answer = 
-account.1.missed_calllog = 
+account.1.missed_calllog = {$yealink_missed_calllog} 
 account.1.100rel_enable = {$yealink_retransmission}
 account.1.enable_user_equal_phone = 
 account.1.compact_header_enable = 
@@ -873,7 +873,7 @@ account.2.music_server_uri =
 ##                            Advanced                                               ##
 #######################################################################################
 account.2.auto_answer = 
-account.2.missed_calllog = 
+account.2.missed_calllog = {$yealink_missed_calllog} 
 account.2.100rel_enable = {$yealink_retransmission}
 account.2.enable_user_equal_phone = 
 account.2.compact_header_enable = 
@@ -1336,7 +1336,7 @@ account.3.music_server_uri =
 ##                            Advanced                                               ##
 #######################################################################################
 account.3.auto_answer = 
-account.3.missed_calllog = 
+account.3.missed_calllog = {$yealink_missed_calllog} 
 account.3.100rel_enable = {$yealink_retransmission}
 account.3.enable_user_equal_phone = 
 account.3.compact_header_enable = 
@@ -1803,7 +1803,7 @@ account.4.music_server_uri =
 ##                            Advanced                                               ##
 #######################################################################################
 account.4.auto_answer = 
-account.4.missed_calllog = 
+account.4.missed_calllog = {$yealink_missed_calllog} 
 account.4.100rel_enable = {$yealink_retransmission}
 account.4.enable_user_equal_phone = 
 account.4.compact_header_enable = 
@@ -2271,7 +2271,7 @@ account.5.music_server_uri =
 ##                            Advanced                                               ##
 #######################################################################################
 account.5.auto_answer = 
-account.5.missed_calllog = 
+account.5.missed_calllog = {$yealink_missed_calllog} 
 account.5.100rel_enable = {$yealink_retransmission}
 account.5.enable_user_equal_phone = 
 account.5.compact_header_enable = 
@@ -2741,7 +2741,7 @@ account.6.music_server_uri =
 ##                            Advanced                                               ##
 #######################################################################################
 account.6.auto_answer = 
-account.6.missed_calllog = 
+account.6.missed_calllog = {$yealink_missed_calllog} 
 account.6.100rel_enable = {$yealink_retransmission}
 account.6.enable_user_equal_phone = 
 account.6.compact_header_enable = 
