--- a/resources/templates/provision/yealink/t57w/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t57w/{$mac}.cfg
@@ -306,7 +306,7 @@ account.1.auto_answer_mute_enable
 #######################################################################################
 ##                                 History                                           ##       
 #######################################################################################
-account.1.missed_calllog=
+account.1.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################  
@@ -845,7 +845,7 @@ account.2.auto_answer_mute_enable
 #######################################################################################
 ##                                 History                                           ##       
 #######################################################################################
-account.2.missed_calllog=
+account.2.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################  
@@ -1372,7 +1372,7 @@ account.3.auto_answer_mute_enable
 #######################################################################################
 ##                                 History                                           ##       
 #######################################################################################
-account.3.missed_calllog=
+account.3.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################  
@@ -1899,7 +1899,7 @@ account.4.auto_answer_mute_enable
 #######################################################################################
 ##                                 History                                           ##       
 #######################################################################################
-account.4.missed_calllog=
+account.4.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################  
@@ -2425,7 +2425,7 @@ account.5.auto_answer_mute_enable
 #######################################################################################
 ##                                 History                                           ##       
 #######################################################################################
-account.5.missed_calllog=
+account.5.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################  
@@ -2965,7 +2965,7 @@ account.6.auto_answer_mute_enable
 #######################################################################################
 ##                                 History                                           ##       
 #######################################################################################
-account.6.missed_calllog=
+account.6.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################  
@@ -3492,7 +3492,7 @@ account.7.auto_answer_mute_enable
 #######################################################################################
 ##                                 History                                           ##       
 #######################################################################################
-account.7.missed_calllog=
+account.7.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################  
@@ -4019,7 +4019,7 @@ account.8.auto_answer_mute_enable
 #######################################################################################
 ##                                 History                                           ##       
 #######################################################################################
-account.8.missed_calllog=
+account.8.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################  
@@ -4546,7 +4546,7 @@ account.9.auto_answer_mute_enable
 #######################################################################################
 ##                                 History                                           ##       
 #######################################################################################
-account.9.missed_calllog=
+account.9.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################  
@@ -5073,7 +5073,7 @@ account.10.auto_answer_mute_enable
 #######################################################################################
 ##                                 History                                           ##       
 #######################################################################################
-account.10.missed_calllog=
+account.10.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################  
