--- a/resources/templates/provision/yealink/t58w/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t58w/{$mac}.cfg
@@ -517,7 +517,7 @@ account.{$row.line_number}.music_server_uri =
 ##                            Advanced                                               ##
 #######################################################################################
 account.{$row.line_number}.auto_answer = 
-account.{$row.line_number}.missed_calllog = 
+account.{$row.line_number}.missed_calllog = {$yealink_missed_calllog} 
 account.{$row.line_number}.100rel_enable = 
 account.{$row.line_number}.enable_user_equal_phone = 
 account.{$row.line_number}.compact_header_enable = 
@@ -678,7 +678,7 @@ pstn.account.x.auto_answer_mute_enable=
 pstn.account.x.auto_answer=
 pstn.account.x.enable=
 pstn.account.x.label=
-pstn.account.x.missed_calllog=
+pstn.account.x.missed_calllog = {$yealink_missed_calllog}
 pstn.account.x.ring_type=
 ###V86####
 account.*.codec.g729ab.enable=
