--- a/resources/templates/provision/yealink/t5x/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t5x/{$mac}.cfg
@@ -369,7 +369,7 @@ account.{$row.line_number}.music_server_uri =
 account.{$row.line_number}.auto_answer =
 
 #Enable or disable the phone to record the missed call 0-Disabled, 1-Enabled (default)
-account.{$row.line_number}.missed_calllog =
+account.{$row.line_number}.missed_calllog = {$yealink_missed_calllog}
 
 #Enable or disable the 100 reliable retransmission 0-Disabled (default), 1-Enabled
 account.{$row.line_number}.100rel_enable =
