--- a/resources/templates/provision/yealink/vp59/{$mac}.cfg
+++ b/resources/templates/provision/yealink/vp59/{$mac}.cfg
@@ -413,7 +413,7 @@ account.{$row.line_number}.music_server_uri =
 ##                            Advanced                                               ##
 #######################################################################################
 account.{$row.line_number}.auto_answer = 
-account.{$row.line_number}.missed_calllog = 
+account.{$row.line_number}.missed_calllog = {$yealink_missed_calllog} 
 account.{$row.line_number}.100rel_enable = {$yealink_retransmission}
 account.{$row.line_number}.enable_user_equal_phone = 
 account.{$row.line_number}.compact_header_enable = 
