--- a/resources/templates/provision/yealink/cp960/{$mac}.cfg
+++ b/resources/templates/provision/yealink/cp960/{$mac}.cfg
@@ -427,7 +427,7 @@ account.1.music_server_uri =
 account.1.auto_answer =
 
 #Enable or disable the phone to record the missed call; 0-Disabled, 1-Enabled (default);
-account.1.missed_calllog =
+account.1.missed_calllog = {$yealink_missed_calllog}
 
 #Enable or disable the 100 reliable retransmission; 0-Disabled (default), 1-Enabled;
 account.1.100rel_enable = {$yealink_retransmission}
@@ -898,7 +898,7 @@ account.2.music_server_uri =
 account.2.auto_answer =
 
 #Enable or disable the phone to record the missed call; 0-Disabled, 1-Enabled (default);
-account.2.missed_calllog =
+account.2.missed_calllog = {$yealink_missed_calllog}
 
 #Enable or disable the 100 reliable retransmission; 0-Disabled (default), 1-Enabled;
 account.2.100rel_enable = {$yealink_retransmission}
@@ -1413,7 +1413,7 @@ account.3.music_server_uri =
 account.3.auto_answer =
 
 #Enable or disable the phone to record the missed call; 0-Disabled, 1-Enabled (default);
-account.3.missed_calllog =
+account.3.missed_calllog = {$yealink_missed_calllog}
 
 #Enable or disable the 100 reliable retransmission; 0-Disabled (default), 1-Enabled;
 account.3.100rel_enable = {$yealink_retransmission}
@@ -1912,7 +1912,7 @@ account.4.music_server_uri =
 account.4.auto_answer =
 
 #Enable or disable the phone to record the missed call; 0-Disabled, 1-Enabled (default);
-account.4.missed_calllog =
+account.4.missed_calllog = {$yealink_missed_calllog}
 
 #Enable or disable the 100 reliable retransmission; 0-Disabled (default), 1-Enabled;
 account.4.100rel_enable = {$yealink_retransmission}
@@ -2409,7 +2409,7 @@ account.5.music_server_uri =
 account.5.auto_answer =
 
 #Enable or disable the phone to record the missed call; 0-Disabled, 1-Enabled (default);
-account.5.missed_calllog =
+account.5.missed_calllog = {$yealink_missed_calllog}
 
 #Enable or disable the 100 reliable retransmission; 0-Disabled (default), 1-Enabled;
 account.5.100rel_enable = {$yealink_retransmission}
@@ -2905,7 +2905,7 @@ account.6.music_server_uri =
 account.6.auto_answer =
 
 #Enable or disable the phone to record the missed call; 0-Disabled, 1-Enabled (default);
-account.6.missed_calllog =
+account.6.missed_calllog = {$yealink_missed_calllog}
 
 #Enable or disable the 100 reliable retransmission; 0-Disabled (default), 1-Enabled;
 account.6.100rel_enable = {$yealink_retransmission}
