--- a/resources/templates/provision/yealink/t20p/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t20p/{$mac}.cfg
@@ -171,7 +171,7 @@ account.1.direct_pickup_code =
 account.1.auto_answer =
 
 #Enable or disable the phone to record the missed call; 0-Disabled, 1-Enabled (default);
-account.1.missed_calllog =
+account.1.missed_calllog = {$yealink_missed_calllog}
 
 #Enable or disable the phone to subscribe to the voicemail through the message waiting indicator; 0-Disabled (default), 1-Enabled;
 account.1.subscribe_mwi_to_vm = {$yealink_subscribe_mwi_to_vm}
@@ -526,7 +526,7 @@ account.2.direct_pickup_code =
 account.2.auto_answer =
 
 #Enable or disable the phone to record the missed call; 0-Disabled, 1-Enabled (default);
-account.2.missed_calllog =
+account.2.missed_calllog = {$yealink_missed_calllog}
 
 #Enable or disable the phone to subscribe to the voicemail through the message waiting indicator; 0-Disabled (default), 1-Enabled;
 account.2.subscribe_mwi_to_vm = {$yealink_subscribe_mwi_to_vm}
@@ -851,7 +851,7 @@ account.3.direct_pickup_code =
 account.3.auto_answer =
 
 #Enable or disable the phone to record the missed call; 0-Disabled, 1-Enabled (default);
-account.3.missed_calllog =
+account.3.missed_calllog = {$yealink_missed_calllog}
 
 #Enable or disable the phone to subscribe to the voicemail through the message waiting indicator; 0-Disabled (default), 1-Enabled;
 account.3.subscribe_mwi_to_vm = {$yealink_subscribe_mwi_to_vm}
@@ -1176,7 +1176,7 @@ account.4.direct_pickup_code =
 account.4.auto_answer =
 
 #Enable or disable the phone to record the missed call; 0-Disabled, 1-Enabled (default);
-account.4.missed_calllog =
+account.4.missed_calllog = {$yealink_missed_calllog}
 
 #Enable or disable the phone to subscribe to the voicemail through the message waiting indicator; 0-Disabled (default), 1-Enabled;
 account.4.subscribe_mwi_to_vm = {$yealink_subscribe_mwi_to_vm}
@@ -1504,7 +1504,7 @@ account.5.direct_pickup_code =
 account.5.auto_answer =
 
 #Enable or disable the phone to record the missed call; 0-Disabled, 1-Enabled (default);
-account.5.missed_calllog =
+account.5.missed_calllog = {$yealink_missed_calllog}
 
 #Enable or disable the phone to subscribe to the voicemail through the message waiting indicator; 0-Disabled (default), 1-Enabled;
 account.5.subscribe_mwi_to_vm = {$yealink_subscribe_mwi_to_vm}
@@ -1827,7 +1827,7 @@ account.6.direct_pickup_code =
 account.6.auto_answer =
 
 #Enable or disable the phone to record the missed call; 0-Disabled, 1-Enabled (default);
-account.6.missed_calllog =
+account.6.missed_calllog = {$yealink_missed_calllog}
 
 #Enable or disable the phone to subscribe to the voicemail through the message waiting indicator; 0-Disabled (default), 1-Enabled;
 account.6.subscribe_mwi_to_vm = {$yealink_subscribe_mwi_to_vm}
