--- a/resources/templates/provision/yealink/t46u/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t46u/{$mac}.cfg
@@ -310,7 +310,7 @@ account.1.share_line.cancel_private_code =
 #######################################################################################
 ##                                 History                                           ##
 #######################################################################################
-account.1.missed_calllog=
+account.1.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################
@@ -873,7 +873,7 @@ account.2.share_line.cancel_private_code =
 #######################################################################################
 ##                                 History                                           ##
 #######################################################################################
-account.2.missed_calllog=
+account.2.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################
@@ -1436,7 +1436,7 @@ account.3.share_line.cancel_private_code =
 #######################################################################################
 ##                                 History                                           ##
 #######################################################################################
-account.3.missed_calllog=
+account.3.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################
@@ -1999,7 +1999,7 @@ account.4.share_line.cancel_private_code =
 #######################################################################################
 ##                                 History                                           ##
 #######################################################################################
-account.4.missed_calllog=
+account.4.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################
@@ -2562,7 +2562,7 @@ account.5.share_line.cancel_private_code =
 #######################################################################################
 ##                                 History                                           ##
 #######################################################################################
-account.5.missed_calllog=
+account.5.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################
@@ -3125,7 +3125,7 @@ account.6.share_line.cancel_private_code =
 #######################################################################################
 ##                                 History                                           ##
 #######################################################################################
-account.6.missed_calllog=
+account.6.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################
