--- a/resources/templates/provision/yealink/t54s/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t54s/{$mac}.cfg
@@ -513,7 +513,7 @@ account.1.picture_info_enable=
 #######################################################################################
 ##                                 History                                           ##       
 #######################################################################################
-account.1.missed_calllog=
+account.1.missed_calllog = {$yealink_missed_calllog}
 
 
 #######################################################################################  
