--- a/resources/templates/provision/yealink/t54w/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t54w/{$mac}.cfg
@@ -307,7 +307,7 @@ account.{$row.line_number}.auto_answer_mute_enable
 #######################################################################################
 ##                                 History                                           ##       
 #######################################################################################
-account.{$row.line_number}.missed_calllog=
+account.{$row.line_number}.missed_calllog = {$yealink_missed_calllog}
 
 #######################################################################################  
 ##                                  Forward                                          ##  
