--- a/resources/templates/provision/yealink/t48g/y000000000035.cfg
+++ b/resources/templates/provision/yealink/t48g/y000000000035.cfg
@@ -790,7 +790,7 @@ features.dtmf.replace_tran =
 ##                                   Features Audio Settings                         ##
 #######################################################################################
 #Enable or disable the headset prior feature; 0-Disabled (default), 1-Enabled;
-features.headset_prior =
+features.headset_prior= {$yealink_headset_prior}
 
 #Enable or disable the dual headset feature; 0-Disabled (default), 1-Enabled;
 features.headset_training =
