--- a/resources/templates/provision/yealink/t54w/y000000000096.cfg
+++ b/resources/templates/provision/yealink/t54w/y000000000096.cfg
@@ -475,7 +475,7 @@ features.group_listen_in_talking_enable =
 phone_setting.call_info_display_method = {$yealink_call_info_display_method}
 phone_setting.called_party_info_display.enable =
 features.headset_training =
-features.headset_prior =
+features.headset_prior= {$yealink_headset_prior}
 features.dtmf.replace_tran =
 features.dtmf.transfer =
 phone_setting.ringing_timeout = {$yealink_ringing_timeout}
