--- a/resources/templates/provision/yealink/t58a/y000000000058.cfg
+++ b/resources/templates/provision/yealink/t58a/y000000000058.cfg
@@ -815,7 +815,7 @@ features.play_local_dtmf_tone_enable =
 #######################################################################################
 ##                                   Features Audio Settings                         ##
 #######################################################################################
-features.headset_prior = 
+features.headset_prior= {$yealink_headset_prior}
 features.headset_training = 
 features.alert_info_tone =
 features.busy_tone_delay = 
