T41S registration was broken
Copied from T41P since it works.

--- a/resources/templates/provision/yealink/t41s/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t41s/{$mac}.cfg
@@ -9,52 +9,48 @@
 #######################################################################################
 ##                           Account 1 Basic Settings                                ##
 #######################################################################################
-
 ## ranges from 1 to 6;
 ##account.X.enable =
-
-{if isset($account.{$row.line_number}.password) }
-account.{$row.line_number}.enable = 1
+{if isset($account.1.password) }
+account.1.enable = 1
 {else}
-account.{$row.line_number}.enable = 0
+account.1.enable = 0
 {/if}
-account.{$row.line_number}.label = {$account.{$row.line_number}.label}
-account.{$row.line_number}.display_name = {$account.{$row.line_number}.display_name}
-account.{$row.line_number}.auth_name = {$account.{$row.line_number}.auth_id}
-account.{$row.line_number}.password = {$account.{$row.line_number}.password}
-{if isset($account.{$row.line_number}.server.1.address)}
-account.{$row.line_number}.user_name = {$account.{$row.line_number}.user_id}@{$account.{$row.line_number}.server_address}
+account.1.label = {$account.1.label}
+account.1.display_name = {$account.1.display_name}
+account.1.auth_name = {$account.1.auth_id}
+account.1.password = {$account.1.password}
+{if isset($account.1.server.1.address)}
+account.1.user_name = {$account.1.user_id}@{$account.1.server_address}
 {else}
-account.{$row.line_number}.user_name = {$account.{$row.line_number}.user_id}
+account.1.user_name = {$account.1.user_id}
 {/if}
-account.{$row.line_number}.sip_server_host = {$account.{$row.line_number}.server_address}
-account.{$row.line_number}.sip_server_port = {$account.{$row.line_number}.sip_port}
-account.{$row.line_number}.outbound_host = {$account.{$row.line_number}.outbound_proxy}
-account.{$row.line_number}.outbound_port = {$account.{$row.line_number}.sip_port}
-{if isset($yealink_sip_listen_port)}account.{$row.line_number}.sip_listen_port = {$yealink_sip_listen_port}{else}account.{$row.line_number}.sip_listen_port = 5060{/if}
+account.1.sip_server_host = {$account.1.server_address}
+account.1.sip_server_port = {$account.1.sip_port}
+account.1.outbound_host = {$account.1.outbound_proxy}
+account.1.outbound_port = {$account.1.sip_port}
+{if isset($yealink_sip_listen_port)}account.1.sip_listen_port = {$yealink_sip_listen_port}{else}account.1.sip_listen_port = 5060{/if}
 
 #Configure the transport type; 0-UDP (default), 1-TCP, 2-TLS, 3-DNS SRV;
-{if $account.{$row.line_number}.sip_transport == 'udp'}account.{$row.line_number}.transport = 0{/if}
-{if $account.{$row.line_number}.sip_transport == 'tcp'}account.{$row.line_number}.transport = 1{/if}
-{if $account.{$row.line_number}.sip_transport == 'tls'}account.{$row.line_number}.transport = 2{/if}
-{if $account.{$row.line_number}.sip_transport == 'dns srv'}account.{$row.line_number}.transport = 3{/if}
+{if $account.1.sip_transport == 'udp'}account.1.transport = 0{/if}
+{if $account.1.sip_transport == 'tcp'}account.1.transport = 1{/if}
+{if $account.1.sip_transport == 'tls'}account.1.transport = 2{/if}
+{if $account.1.sip_transport == 'dns srv'}account.1.transport = 3{/if}
 
-account.{$row.line_number}.outbound_proxy.1.address = {$account.{$row.line_number}.outbound_proxy_primary}
-account.{$row.line_number}.outbound_proxy.2.address = {$account.{$row.line_number}.outbound_proxy_secondary}
-account.{$row.line_number}.outbound_proxy_enable = {if isset($account.{$row.line_number}.outbound_proxy_primary)}1{else}0{/if}
+account.1.outbound_proxy.1.address = {$account.1.outbound_proxy_primary}
+account.1.outbound_proxy.2.address = {$account.1.outbound_proxy_secondary}
+account.1.outbound_proxy_enable = {if isset($account.1.outbound_proxy_primary)}1{else}0{/if}
 
 {if isset($outbound_proxy_1_port)}
-account.{$row.line_number}.outbound_proxy.1.port = {$outbound_proxy_1_port}
+account.1.outbound_proxy.1.port = {$outbound_proxy_1_port}
 {else}
-account.{$row.line_number}.outbound_proxy.1.port = {$account.{$row.line_number}.sip_port}
+account.1.outbound_proxy.1.port = {$account.1.sip_port}
 {/if}
 {if isset($outbound_proxy_1_port)}
-account.{$row.line_number}.outbound_proxy.2.port = {$outbound_proxy_2_port}
+account.1.outbound_proxy.2.port = {$outbound_proxy_2_port}
 {else}
-account.{$row.line_number}.outbound_proxy.2.port = {$account.{$row.line_number}.sip_port}
+account.1.outbound_proxy.2.port = {$account.1.sip_port}
 {/if}
-
-{/foreach}
 
 #######################################################################################
 ##                          Failback                                                 ##
