--- a/resources/templates/provision/yealink/w70b/{$mac}.cfg
+++ b/resources/templates/provision/yealink/w70b/{$mac}.cfg
@@ -64,7 +64,7 @@ account.1.anonymous_reject_oncode =
 account.1.anonymous_reject_offcode =
 
 #Configure the SIP port for account 1, the default value is 5060.
-account.1.sip_listen_port =
+account.1.sip_listen_port =  {$yealink_sip_listen_port}
 
 #Enable or disable the 100 reliable retransmission; 0-Disabled, 1-Enabled (default);
 account.1.100rel_enable = {$yealink_retransmission}
