--- a/resources/templates/provision/yealink/t58w/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t58w/{$mac}.cfg
@@ -19,7 +19,7 @@ account.{$row.line_number}.auth_name = {$row.auth_id}
 account.{$row.line_number}.user_name = {$row.user_id}
 account.{$row.line_number}.password = {$row.password}
 
-account.{$row.line_number}.outbound_proxy_enable = {if isset($row.outbound_proxy_primary)}1{else}0{/if}
+account.{$row.line_number}.outbound_proxy_enable = {if isset($row.outbound_proxy_primary)}1{else}0{/if}{"\n"}
 account.{$row.line_number}.outbound_proxy.1.address = {$row.outbound_proxy_primary}
 {if isset($outbound_proxy_1_port)}
 account.{$row.line_number}.outbound_proxy.1.port = {$outbound_proxy_1_port}
