Added two new minor hardware revisions, the CP925 and T42U, and added the voice.tone.country = {} to all templates, previously missing on most

--- a/resources/templates/provision/yealink/t20p/y000000000007.cfg
+++ b/resources/templates/provision/yealink/t20p/y000000000007.cfg
@@ -332,8 +332,7 @@ voice.jib.max =
 voice.jib.normal =
 
 #Define the voice tone, the valid values can be Custom (default) or voice tone of different countries. For example, United States, France, Germany and so on.
-#voice.tone.country = Custom
-voice.tone.country =
+voice.tone.country = {$yealink_voice_tone_country}
 
 #Customize the tone when the "voice.tone.country" is configured as Custom.
 #The value format: Frequency/Duration.
@@ -352,7 +351,8 @@ voice.tone.record=
 voice.tone.info =
 voice.tone.stutter =
 voice.tone.message =
-voice.tone.autoanswer =
+voice.wtfppppppp
+one.autoanswer =
 
 #Configure the receiving volume of Speaker, Handset and Headset. It ranges from 0 to 15, the default value is 8.
 voice.handfree.spk_vol =
