--- a/resources/templates/provision/yealink/t58a/y000000000058.cfg
+++ b/resources/templates/provision/yealink/t58a/y000000000058.cfg
@@ -403,7 +403,7 @@ voice.jib.normal = {$yealink_jib_normal}
 #######################################################################################
 ##                                   Tones                                           ##
 #######################################################################################
-voice.tone.country =
+voice.tone.country = {$yealink_voice_tone_country}
 voice.tone.dial = 
 voice.tone.ring = 
 voice.tone.busy = 
