--- a/resources/templates/provision/yealink/vp59/y000000000091.cfg
+++ b/resources/templates/provision/yealink/vp59/y000000000091.cfg
@@ -388,7 +388,7 @@ voice.jib.normal =
 #######################################################################################
 ##                                   Tones                                           ##       
 #######################################################################################
-voice.tone.country =
+voice.tone.country = {$yealink_voice_tone_country}
 voice.tone.dial = 
 voice.tone.ring = 
 voice.tone.busy = 
