Minor typo from a wrong window issue, and removing the commented examples for easier grepping

--- a/resources/templates/provision/yealink/t20p/y000000000007.cfg
+++ b/resources/templates/provision/yealink/t20p/y000000000007.cfg
@@ -351,8 +351,7 @@ voice.tone.record=
 voice.tone.info =
 voice.tone.stutter =
 voice.tone.message =
-voice.wtfppppppp
-one.autoanswer =
+voice.tone.autoanswer =
 
 #Configure the receiving volume of Speaker, Handset and Headset. It ranges from 0 to 15, the default value is 8.
 voice.handfree.spk_vol =
